add dashboard project link in work section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
                 <ul class="collapse list-unstyled" id="collapse1">
                   <span class="card card-body">
-                    <li>Text 1</li>
-                    <li>Text 2</li>
-                    <li>Text 3</li>
+                    <li>Pie Charts</li>
+                    <li>Line Chart</li>
+                    <li>Data Tables</li>
                   </span>
                 </ul>
               </li>
@@ -60,9 +60,9 @@
 
                 <ul class="collapse list-unstyled" id="collapse2">
                   <span class="card card-body">
-                    <li>Text 1</li>
-                    <li>Text 2</li>
-                    <li>Text 3</li>
+                    <li>Option 1</li>
+                    <li>Option 2</li>
+                    <li>Option 3</li>
                   </span>
                 </ul>
               </li>
@@ -77,9 +77,9 @@
                 <ul class="collapse list-unstyled" id="collapse3">
                   <span class="card card-body">
 
-                    <li>Text 1</li>
-                    <li>Text 2</li>
-                    <li>Text 3</li>
+                    <li>Page 1</li>
+                    <li>Page 2</li>
+                    <li>Page 3</li>
                   </span>
                 </ul>
               </li>
@@ -149,9 +149,9 @@
 
                 <ul class="dropdown-menu list-unstyled position-absolute">
                   <span class="card card-body">
-                    <li>Text 1</li>
-                    <li>Text 2</li>
-                    <li>Text 3</li>
+                    <li>Option 1</li>
+                    <li>Option 2</li>
+                    <li>Option 3</li>
                   </span>
                 </ul>
               </li>
@@ -165,9 +165,9 @@
                 <ul class="dropdown-menu list-unstyled position-absolute">
                   <span class="card card-body">
 
-                    <li>Text 1</li>
-                    <li>Text 2</li>
-                    <li>Text 3</li>
+                    <li>Page 1</li>
+                    <li>Page 2</li>
+                    <li>Page 3</li>
                   </span>
                 </ul>
               </li>
@@ -240,9 +240,9 @@
 
                         <ul class="dropdown-menu list-unstyled position-absolute">
                           <span class="card card-body">
-                            <li>Text 1</li>
-                            <li>Text 2</li>
-                            <li>Text 3</li>
+                            <li>Charts</li>
+                            <li>Tables</li>
+                            <li>Line Charts</li>
                           </span>
                         </ul>
                       </li>
@@ -256,9 +256,9 @@
 
                         <ul class="dropdown-menu list-unstyled position-absolute">
                           <span class="card card-body">
-                            <li>Text 1</li>
-                            <li>Text 2</li>
-                            <li>Text 3</li>
+                            <li>Option 1</li>
+                            <li>Option 2</li>
+                            <li>Option 3</li>
                           </span>
                         </ul>
                       </li>
@@ -272,9 +272,9 @@
                         <ul class="dropdown-menu list-unstyled position-absolute">
                           <span class="card card-body">
 
-                            <li>Text 1</li>
-                            <li>Text 2</li>
-                            <li>Text 3</li>
+                            <li>Page 1</li>
+                            <li>Page 2</li>
+                            <li>Page 3</li>
                           </span>
                         </ul>
                       </li>
@@ -370,7 +370,7 @@
       <main>
         <div class="container-fluid px-4">
           <div class="dashboard-heading d-flex justify-content-between align-items-center py-4">
-            <h1 class="text-black-50 fs-3 fw-normal">Dashboard</h1>
+            <h1 class="text-black-50 fs-3 fw-normal m-0">Dashboard</h1>
             <a href="#" class="btn btn-primary bg-color-blue generate-btn rounded-1 fs-14 py-1 px-2"><i
                 class="fas fa-download fa-sm text-white-50 me-1"></i>Generate Report</a>
           </div>
@@ -448,7 +448,7 @@
                   class="d-flex justify-content-between align-items-center border border-bottom-0 rounded-top-1 px-3 py-2">
                   <h2 class="fs-6 color-blue m-0">Earning Overviews</h2>
                   <div class="btn-group dropstart">
-                    <button type="button" class=" px-0 line-chart-menu dropdown-toggle border-0 color-grey"
+                    <button type="button" class=" px-0 line-chart-menu dropdown-toggle border-0 color-grey bg-transparent"
                       data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                     </button>
@@ -468,7 +468,7 @@
                   class="d-flex justify-content-between align-items-center border border-bottom-0 rounded-top-1 px-3 py-2  mt-4 mt-md-0">
                   <h2 class="fs-6 color-blue m-0 fw-semibold">Revenue Sources</h2>
                   <div class="btn-group dropstart">
-                    <button type="button" class=" px-0 line-chart-menu dropdown-toggle border-0 color-grey"
+                    <button type="button" class=" px-0 line-chart-menu dropdown-toggle border-0 color-grey bg-transparent"
                       data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                     </button>
