--- a/index.html
+++ b/index.html
@@ -444,6 +444,9 @@
           <div class="charts-container mt-4">
             <div class="row">
               <div class=" col-lg-7 col-xl-8">
+                <div class="shadow">
+
+                
                 <div
                   class="d-flex justify-content-between align-items-center border border-bottom-0 rounded-top-1 px-3 py-2">
                   <h2 class="fs-6 color-blue m-0">Earning Overviews</h2>
@@ -459,19 +462,21 @@
                     </ul>
                   </div>
                 </div>
-                <div class="line-chart border shadow rounded-bottom-1 px-2 py-3" id="LineChart">
-
+                <div class="line-chart border rounded-bottom-1 px-2 py-3" id="LineChart">
                 </div>
               </div>
+              </div>
               <div class="col-lg-5 col-xl-4">
-                <div
+                <div class="shadow">
+
+                  <div
                   class="d-flex justify-content-between align-items-center border border-bottom-0 rounded-top-1 px-3 py-2  mt-4 mt-md-0">
                   <h2 class="fs-6 color-blue m-0 fw-semibold">Revenue Sources</h2>
                   <div class="btn-group dropstart">
                     <button type="button" class=" px-0 line-chart-menu dropdown-toggle border-0 color-grey bg-transparent"
-                      data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </button>
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                  </button>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Menu item</a></li>
                       <li><a class="dropdown-item" href="#">Menu item</a></li>
@@ -480,8 +485,140 @@
                   </div>
                 </div>
                 <div
-                  class="pie-chart d-flex align-items-center justify-content-center border shadow rounded-bottom-1 px-2 py-3"
-                   id="PieChart">
+                class="pie-chart d-flex align-items-center justify-content-center border rounded-bottom-1 px-2 py-3"
+                id="PieChart">
+              </div>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="project-tables-container mt-4 pb-4">
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="shadow">
+
+                  <div
+                  class=" d-flex justify-content-between align-items-center border border-bottom-0 rounded-top-1 px-3 py-2">
+                  <h2 class="fs-6 color-blue my-1">Projects</h2>
+                  
+                </div>
+                <div class="project-progress-details border p-3 rounded-bottom">
+                  <div class="mb-3">
+                  <div class="d-flex justify-content-between align-items-center mb-1">
+                    <h4 class="fs-12 m-0 color-grey1">Server Migration</h4>
+                    <p class="m-0 fs-12 fw-semibold color-grey1">20%</p>
+                  </div>
+                  <div class="progress bg" role="progressbar" aria-label="Danger example" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-danger" style="width: 20%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between align-items-center mb-1">
+                    <h4 class="fs-12 m-0 color-grey1">Sales Tracking</h4>
+                    <p class="m-0 fs-12 fw-semibold color-grey1">40%</p>
+                  </div>
+                  <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-warning" style="width: 40%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between align-items-center mb-1">
+                    <h4 class="fs-12 m-0 color-grey1">Customer Database </h4>
+                    <p class="m-0 fs-12 fw-semibold color-grey1">60%</p>
+                  </div>
+                  <div class="progress" role="progressbar" aria-label="color-blue example" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-color-blue" style="width: 60%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between align-items-center mb-1">
+                    <h4 class="fs-12 m-0 color-grey1">Payout Details </h4>
+                    <p class="m-0 fs-12 fw-semibold color-grey1">80%</p>
+                  </div>
+                  <div class="progress" role="progressbar" aria-label="color-greenMix example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-color-greenMix" style="width: 80%"></div>
+                  </div>
+                </div>
+                <div>
+                  <div class="d-flex justify-content-between align-items-center mb-1">
+                    <h4 class="fs-12 m-0 color-grey1">Account Setup </h4>
+                    <p class="m-0 fs-12 fw-semibold color-grey1">100%</p>
+                  </div>
+                  <div class="progress" role="progressbar" aria-label="color-green example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-color-green" style="width: 100%"></div>
+                  </div>
+                </div>
+                </div>
+                 </div>
+              </div>
+              <div class="col-lg-7 mt-3 mt-lg-0">
+                <div class="shadow">
+                  <div
+                  class="d-flex justify-content-between align-items-center border border-bottom-0 rounded-top-1 px-3 py-2  mt-4 mt-md-0">
+                  <h2 class="fs-6 color-blue m-0 fw-semibold">Customer Data</h2>
+                  <div class="btn-group dropstart">
+                    <button type="button" class=" px-0 line-chart-menu dropdown-toggle border-0 color-grey bg-transparent"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                  </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Menu item</a></li>
+                      <li><a class="dropdown-item" href="#">Menu item</a></li>
+                      <li><a class="dropdown-item" href="#">Menu item</a></li>
+                    </ul>
+                  </div>
+                </div>
+              <div class="table-responsive p-3 border rounded-bottom pt-2"> 
+                <!-- <table class="table table-bordered table-hover border-color"> -->
+                  <table class="table table-hover color-grey1">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                        <th scope="col">Contact</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td>+12003300</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td>+12340550</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Smith</td>
+                        <td>Wadd</td>
+                        <td>@twitter</td>
+                        <td>+14343500</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Henvy</td>
+                        <td>Johan</td>
+                        <td>@threads</td>
+                        <td>+12343800</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>Convey</td>
+                        <td>Wed</td>
+                        <td>@twitter</td>
+                        <td>+17303300</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                <!-- </table> -->
                 </div>
               </div>
             </div>
@@ -579,16 +716,11 @@
             colors: ['#b7b9cc']
           }
         },
-
       },
       stroke: {
         curve: 'smooth',
         colors: ["#4e73df"],
-
-
       },
-
-
       grid: {
         row: {
           colors: ['#f3f3f3', 'transparent'], // takes an array which will be repeated on columns
